# CppOfficeHour

./: CMakeLists.txt  README.md  Responses.md
.devcontainer/: Dockerfile
app/: CMakeLists.txt  myApp.cpp  myClassStudyApp.cpp
model/include/: A.h  B.h
model/src/: B.cpp  CMakeLists.txt
myutils/include/: ClsStudyExUtils.h  atomichanUtils.h
myutils/src/: CMakeLists.txt  atomichanUtils.cpp  productUtils.cpp
test/: CMakeLists.txt  myTest.cpp  testOptimisation.cpp
